<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_login">登录</string>
    <string name="login_thoughLogin">跳过登录</string>
    <string name="login_phonenumber">手机号码</string>
    <string name="login_captcha">验证码</string>
    <string name="login_getcaptcha">获取验证码</string>
    <string name="login_agree">同意</string>
</resources>
