<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.login.MainActivity" >

    <TextView
        android:id="@+id/login_thoughLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:text="@string/login_thoughLogin" />

    <LinearLayout
        android:id="@+id/login_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_below="@+id/thoughLogin"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >
        
        <RelativeLayout 
            android:id="@+id/login_relativelayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_editphone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/login_phonenumber"
                android:hint="(+86)"
                android:singleLine="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/login_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/login_phonenumber" />

        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/login_relativelayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_editcaptcha"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="32dp"
                android:layout_toRightOf="@+id/login_captcha"
                android:ems="10"
                android:singleLine="true"
                android:textSize="12sp" />

            <Button
                android:id="@+id/login_buttoncaptcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_editcaptcha"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/login_editcaptcha"
                android:text="@string/login_getcaptcha"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/login_captcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/login_captcha" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_relativelayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_linearlayout"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/login_thoughLogin" >

        <RadioButton
            android:id="@+id/login_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/login_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/login_radiobutton"
            android:text="@string/login_agree"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_relativelayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/login_login"
        android:textSize="12sp" />

</RelativeLayout>